--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">CurrencyExchange</string>
     <string name="exchange">Exchange</string>
+    <string name="enter_summ">Введите сумму</string>
 </resources>
