--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">CurrencyExchange</string>
     <string name="exchange">Exchange</string>
     <string name="enter_summ">Введите сумму</string>
+    <string name="on_account">На счете %s</string>
 </resources>
