--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,12 @@
     <string name="exchange">Exchange</string>
     <string name="enter_summ">Введите сумму</string>
     <string name="on_account">На счете %s</string>
+    <string name="select_different_currencies">Выберите разные валюты</string>
+    <string name="exchange_rate">1%1$s = %2$s%3$s</string>
+    <string name="currency_exchange">Обмен валют</string>
+    <string name="ok">OK</string>
+    <string name="exchange_rate_not_available">Курс обмена недоступен</string>
+    <string name="insufficient_funds">Недостаточно средств</string>
+    <string name="exchange_completed"><![CDATA[Обмен выполнен: %1$s %2$s -> %3$s %4$s]]></string>
+    <string name="balance">Баланс: %.2f</string>
 </resources>
